# microS3

./: .clang-format  .clang-tidy  .gitignore  .travis.yml  CMakeLists.txt  LICENSE  README.md
.github/workflows/: build_and_test.yml
ext/: CMakeLists.txt
ext/doctest/: doctest.h
include/us3/: us3.h
lib/: CMakeLists.txt  capi.cpp  capi_status.cpp  connection.cpp  connection.hpp  hmac_sha1.hpp  hmac_sha1_custom.cpp  hmac_sha1_macos.cpp  hmac_sha1_openssl.cpp  hmac_sha1_test.cpp  hmac_sha1_win32.cpp  network_socket.hpp  network_socket_posix.cpp  network_socket_win32.cpp  return_value.hpp  sha1_hmac.hpp  url_parser.cpp  url_parser.hpp  url_parser_test.cpp
scripts/: run_linters.sh
src/: capi.cpp  connection.cpp  connection.hpp  network_socket.hpp  network_socket_posix.cpp  network_socket_win32.cpp  return_value.hpp  sha1_hmac.hpp  sha1_hmac_macos.cpp  sha1_hmac_openssl.cpp  sha1_hmac_win32.cpp  url_parser.cpp  url_parser.hpp
test/: CMakeLists.txt  hmac_sha1_test.cpp  sha1_hmac_test.cpp  url_parser_test.cpp  us3_add_test.cmake
tools/: CMakeLists.txt  us3get.c  us3put.c
